package com.example;

public interface IOrdena {
    public abstract void ordena(int[] v);
}
