package com.example;

import java.util.ArrayList;
import java.util.Collections;

public class MergeSort {
    public void ordena(ArrayList<Integer> a) {
        Collections.sort(a);
    }
}
